# core

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: lib.rs
src/client/: mod.rs
src/network/packet/: login_handshake.rs  mod.rs
