[package]
name        = "shcore"
version     = "0.1.0"
edition     = "2018"
repository  = "https://github.com/OpenShaiya/core"
license     = "MIT"
authors     = ["Triston Plummer <me@triston.io>"]

[lib]
crate-type  = ["lib"]

[dependencies]
bytes       = "0.6"
byteorder   = "1.3.4"
rsa         = "0.3.0"